# CProg

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt
_exempelfiler/lazyFoo-Tutorials/: 03_event_driven_programming.cpp
doc/: Engine.md  README.md  Render.md
doc/Vector/: Vector.md
doc/doxygen/html/: 03__event__driven__programming_8cpp.html  03__event__driven__programming_8cpp__incl.dot  03__event__driven__programming_8cpp_a24b0babc7c151f85567092a4c13fa743_icgraph.dot  03__event__driven__programming_8cpp_a5ae591df94fc66ccb85cbb6565368bca_icgraph.dot  03__event__driven__programming_8cpp_a700a0caa5b70a06d1064e576f9f3cf65_cgraph.dot  03__event__driven__programming_8cpp_aee8048628ff2b5c026c9e15acdcaacb8_icgraph.dot  03__event__driven__programming_8cpp_source.html  08__geometry__rendering_8cpp.html  08__geometry__rendering_8cpp__incl.dot  08__geometry__rendering_8cpp_a24b0babc7c151f85567092a4c13fa743_icgraph.dot  08__geometry__rendering_8cpp_a5ae591df94fc66ccb85cbb6565368bca_icgraph.dot  08__geometry__rendering_8cpp_a700a0caa5b70a06d1064e576f9f3cf65_cgraph.dot  08__geometry__rendering_8cpp_aee8048628ff2b5c026c9e15acdcaacb8_icgraph.dot  08__geometry__rendering_8cpp_source.html  16__true__type__fonts_8cpp.html  16__true__type__fonts_8cpp__incl.dot  16__true__type__fonts_8cpp_a24b0babc7c151f85567092a4c13fa743_cgraph.dot  16__true__type__fonts_8cpp_a24b0babc7c151f85567092a4c13fa743_icgraph.dot  16__true__type__fonts_8cpp_a5ae591df94fc66ccb85cbb6565368bca_cgraph.dot  16__true__type__fonts_8cpp_a5ae591df94fc66ccb85cbb6565368bca_icgraph.dot  16__true__type__fonts_8cpp_a700a0caa5b70a06d1064e576f9f3cf65_cgraph.dot  16__true__type__fonts_8cpp_aee8048628ff2b5c026c9e15acdcaacb8_icgraph.dot  16__true__type__fonts_8cpp_source.html  _color_8h.html  _color_8h__dep__incl.dot  _color_8h_source.html  _constants_8h.html  _constants_8h__dep__incl.dot  _constants_8h__incl.dot  _constants_8h_source.html  _doom_render_8cpp.html  _doom_render_8cpp__incl.dot  _doom_render_8cpp_source.html  _doom_render_8h.html  _doom_render_8h__dep__incl.dot  _doom_render_8h__incl.dot  _doom_render_8h_source.html  _engine_8cpp.html  _engine_8cpp__incl.dot  _engine_8cpp_source.html  (+1213 more)
doc/doxygen/latex/: 03__event__driven__programming_8cpp.tex  03__event__driven__programming_8cpp.tex.tmp  03__event__driven__programming_8cpp__incl.dot  03__event__driven__programming_8cpp_a24b0babc7c151f85567092a4c13fa743_icgraph.dot  03__event__driven__programming_8cpp_a5ae591df94fc66ccb85cbb6565368bca_icgraph.dot  03__event__driven__programming_8cpp_a700a0caa5b70a06d1064e576f9f3cf65_cgraph.dot  03__event__driven__programming_8cpp_aee8048628ff2b5c026c9e15acdcaacb8_icgraph.dot  03__event__driven__programming_8cpp_source.tex  08__geometry__rendering_8cpp.tex  08__geometry__rendering_8cpp__incl.dot  08__geometry__rendering_8cpp_a24b0babc7c151f85567092a4c13fa743_icgraph.dot  08__geometry__rendering_8cpp_a5ae591df94fc66ccb85cbb6565368bca_icgraph.dot  08__geometry__rendering_8cpp_a700a0caa5b70a06d1064e576f9f3cf65_cgraph.dot  08__geometry__rendering_8cpp_aee8048628ff2b5c026c9e15acdcaacb8_icgraph.dot  08__geometry__rendering_8cpp_source.tex  16__true__type__fonts_8cpp.tex  16__true__type__fonts_8cpp__incl.dot  16__true__type__fonts_8cpp_a24b0babc7c151f85567092a4c13fa743_cgraph.dot  16__true__type__fonts_8cpp_a24b0babc7c151f85567092a4c13fa743_icgraph.dot  16__true__type__fonts_8cpp_a5ae591df94fc66ccb85cbb6565368bca_cgraph.dot  16__true__type__fonts_8cpp_a5ae591df94fc66ccb85cbb6565368bca_icgraph.dot  16__true__type__fonts_8cpp_a700a0caa5b70a06d1064e576f9f3cf65_cgraph.dot  16__true__type__fonts_8cpp_aee8048628ff2b5c026c9e15acdcaacb8_icgraph.dot  16__true__type__fonts_8cpp_source.tex  _color_8h.tex  _color_8h__dep__incl.dot  _color_8h_source.tex  _constants_8h.tex  _constants_8h__dep__incl.dot  _constants_8h__incl.dot  _constants_8h_source.tex  _doom_render_8cpp.tex  _doom_render_8cpp__incl.dot  _doom_render_8cpp_source.tex  _doom_render_8h.tex  _doom_render_8h__dep__incl.dot  _doom_render_8h__incl.dot  _doom_render_8h_source.tex  _engine_8cpp.tex  _engine_8cpp__incl.dot  (+1038 more)
include/: Constants.h
include/components/gamecomponents/: Blinky.h  GameObject.h  PacmanController.h  Player.h  TeleportPad.h  WolfensteinController.h
include/components/uiComponents/: ScoreField.h  TextField.h  UIComponent.h
include/engine/: Engine.h  Input.h  Key.h
include/engine/raycaster/: Raycaster.h
include/games/: Game.h  PacMan.h  Tetris.h  Wolfenstein.h
include/scripts/: GameObject.h  PacmanController.h  Player.h  Square.h  Wall.h  WolfensteinController.h  WolfensteinPlayerController.h
include/springhawk/: Audio.h  Color.h  Engine.h  Input.h  Key.h  Map.h  RenderTag.h  Renderer.h  Scene.h  SceneBuilder.h  Sectormap.h  TextureManager.h  TextureTag.h  Tilemap.h  Time.h  Vector2.h
include/springhawk/maps/: Map.h  Sectormap.h  Tile.h  Tilemap.h
include/springhawk/raycaster/: Raycaster.h
include/springhawk/renderers/: DoomRender.h  PlaneRenderer.h  Raycaster.h  RenderTag.h  Renderer.h  UIRenderer.h
resources/json/: pacman.json  wolfenstein.json
src/: CMakeLists.txt  main.cpp  test.cpp  test.h
src/engine/: Engine.cpp  Input.cpp  Key.cpp
src/engine/raycaster/: Raycaster.cpp
src/games/: Game.cpp  PacMan.cpp  Tetris.cpp  Wolfenstein.cpp
src/scripts/: GameObject.cpp  PacmanController.cpp  Player.cpp  Square.cpp  Wall.cpp  WolfensteinPlayerController.cpp
src/scripts/Gamecomponents/: Blinky.cpp  GameObject.cpp  PacmanController.cpp  Player.cpp  TeleportPad.cpp  Wall.cpp  WolfensteinController.cpp
src/scripts/UIComponents/: ScoreField.cpp  TextField.cpp  UIComponent.cpp
src/springhawk/: Audio.cpp  Engine.cpp  Input.cpp  Key.cpp  Map.cpp  Renderer.cpp  Scene.cpp  SceneBuilder.cpp  TextureManager.cpp  Time.cpp  Vector2.cpp
src/springhawk/maps/: Map.cpp  Sectormap.cpp  Tile.cpp  Tilemap.cpp
src/springhawk/raycaster/: Raycaster.cpp
src/springhawk/renderers/: DoomRender.cpp  PlaneRenderer.cpp  Raycaster.cpp  Renderer.cpp  UIRenderer.cpp
src/springhawk/renderers/ui/: UIRenderer.cpp
src/springhawk/ui/: TextField.cpp
(+164 files in other folders)
